@@ -55,8 +55,10 @@ all_by_module = {
                              'parse_www_authenticate_header', 'MIMEAccept',
                              'WWWAuthenticate', 'Authorization',
                              'remove_entity_headers', 'is_entity_header',
-                             'remove_hop_by_hop_headers',
-                             'is_hop_by_hop_header', 'HTTP_STATUS_CODES'],
+                             'remove_hop_by_hop_headers', 'parse_options_header',
+                             'dump_options_header', 'is_hop_by_hop_header',
+                             'unquote_header_value',
+                             'quote_header_value', 'HTTP_STATUS_CODES'],
     'werkzeug.wrappers':    ['BaseResponse', 'BaseRequest', 'Request',
                              'Response', 'AcceptMixin', 'ETagRequestMixin',
                              'ETagResponseMixin', 'ResponseStreamMixin',
