@@ -11,7 +11,7 @@
 import sys
 import code
 from types import CodeType
-from cgi import escape
+from werkzeug.utils import escape
 from werkzeug.local import Local
 from werkzeug.debug.repr import debug_repr, dump, helper
 from werkzeug.debug.utils import render_template
